unpackaged/main/default/objects/Contract_Review_Field__mdt/Contract_Review_Field__mdt.object-meta.xml
<CustomObject>
    <description>Stores definitions of special buy line item columns and contract line item columns on contract review page.</description>
    <label>Contract Review Field</label>
    <pluralLabel>Contract Review Field</pluralLabel>
</CustomObject>