unpackaged/main/default/objects/Contract_Review_Field__mdt/fields/Additional_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Additional_Field_Name__c</fullName>
    <description>For renewal contract, some editable inputs require an additional field need to be displayed on the top</description>
    <label>Additional Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>