unpackaged/main/default/objects/Contract_Review_Field__mdt/fields/Cost_Zone__c.field-meta.xml
<CustomField>
    <fullName>Cost_Zone__c</fullName>
    <label>Cost Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
                <default>true</default>
                <label>ALL</label>
            </value>
            <value>
                <fullName>CZ 1</fullName>
            </value>
            <value>
                <fullName>CZ 2</fullName>
            </value>
            <value>
                <fullName>CZ 3</fullName>
            </value>
            <value>
                <fullName>CZ 4</fullName>
            </value>
            <value>
                <fullName>CZ 5</fullName>
            </value>
            <value>
                <fullName>CZ 6</fullName>
            </value>
            <value>
                <fullName>CZ 7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>