unpackaged/main/default/objects/Contract_Review_Field__mdt/fields/Field_Order__c.field-meta.xml
<CustomField>
    <fullName>Field_Order__c</fullName>
    <label>Field Order</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>