unpackaged/main/default/objects/Contract_Review_Field__mdt/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>string</fullName>
                <default>true</default>
                <label>string</label>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>currency</fullName>
            </value>
            <value>
                <fullName>percent</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>boolean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>