unpackaged/main/default/objects/Contract_Review_Field__mdt/fields/Is_Retail__c.field-meta.xml
<CustomField>
    <fullName>Is_Retail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the &quot;Show Retail&quot; checkbox on Search / Filter will show/hide this field</inlineHelpText>
    <label>Is Retail</label>
    <type>Checkbox</type>
</CustomField>