unpackaged/main/default/objects/Contract_Review_Field__mdt/fields/Price_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Price_Field_Name__c</fullName>
    <description>The field referenced in Proposed CZx Special Buy Margin % calculation, special buy field only</description>
    <inlineHelpText>The field referenced in Proposed CZx Special Buy Margin % calculation, special buy field only</inlineHelpText>
    <label>Price Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>