unpackaged/main/default/objects/Contract_Review_Field__mdt/fields/Table_Type__c.field-meta.xml
<CustomField>
    <fullName>Table_Type__c</fullName>
    <defaultValue>&quot;Contract Line&quot;</defaultValue>
    <label>Table Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Special Buy Line</fullName>
                <default>true</default>
                <label>Special Buy Line</label>
            </value>
            <value>
                <fullName>Contract Line</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>