unpackaged/main/default/objects/Contract_Review_Field__mdt/listViews/AU_New_Contract_Line_Fields.listView-meta.xml
<ListView>
    <fullName>AU_New_Contract_Line_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>Contract_Type__c</columns>
    <columns>Cost_Zone__c</columns>
    <columns>Country__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Field_Order__c</columns>
    <columns>Field_Type__c</columns>
    <columns>Label__c</columns>
    <columns>Editable__c</columns>
    <columns>Is_Retail__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Australia</value>
    </filters>
    <filters>
        <field>Contract_Type__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>Table_Type__c</field>
        <operation>equals</operation>
        <value>Contract Line</value>
    </filters>
    <label>AU New Contract Line Fields</label>
</ListView>