unpackaged/main/default/objects/Contract_Review_Field__mdt/listViews/Special_Buy_Fields.listView-meta.xml
<ListView>
    <fullName>Special_Buy_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>Label__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Field_Type__c</columns>
    <columns>Field_Order__c</columns>
    <columns>Cost_Zone__c</columns>
    <columns>Price_Field_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Table_Type__c</field>
        <operation>equals</operation>
        <value>Special Buy Line</value>
    </filters>
    <label>Special Buy Fields</label>
</ListView>